# advent-of-code

./: Cargo.toml  makefile  rustfmt.toml  template.rs.stub
aoc2015/: Cargo.toml
aoc2015/src/: main.rs
aoc2015/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs
aoc2016/: Cargo.toml
aoc2016/src/: main.rs
aoc2016/src/days/: day01.rs  day02.rs  day03.rs
aoc2017/: Cargo.toml
aoc2017/src/: main.rs
aoc2018/: Cargo.toml
aoc2018/src/: main.rs
aoc2019/: Cargo.toml
aoc2019/src/: main.rs
aoc2020/: Cargo.toml
aoc2020/src/: main.rs
aoc2021/: Cargo.toml
aoc2021/src/: main.rs
aoc2021/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
aoc2022/: Cargo.toml
aoc2022/src/: main.rs
benchmark/: Cargo.toml
benchmark/src/: main.rs
day01/: Cargo.toml
day01/src/: 01.rs  main.rs
day02/: Cargo.toml
day02/src/: main.rs
day03/: Cargo.toml
day03/src/: main.rs
day04/: Cargo.toml
day04/src/: main.rs
day05/: Cargo.toml
day05/src/: 05.rs  main.rs
day06/: Cargo.toml
day06/src/: main.rs
day07/: Cargo.toml
day07/src/: main.rs
day08/: Cargo.toml
day08/src/: main.rs
day09/: Cargo.toml
day09/src/: 09.rs  main.rs
day10/: Cargo.toml
day10/src/: main.rs
day11/: Cargo.toml
day11/src/: 11.rs  main.rs
day12/: Cargo.toml
day12/src/: main.rs
day13/: Cargo.toml
day13/src/: 13.rs  main.rs
day14/: Cargo.toml
day14/src/: 14.rs  main.rs
day15/: Cargo.toml
day15/src/: 15.rs  main.rs
day16/: Cargo.toml
day16/src/: 16.rs  main.rs
day17/: Cargo.toml
day17/src/: 17.rs  main.rs
day18/: Cargo.toml
day18/src/: 18.rs  main.rs
day19/: Cargo.toml
day19/src/: 19.rs  main.rs
day20/: Cargo.toml
day20/src/: 20.rs  main.rs
day21/: Cargo.toml
day21/src/: 21.rs  main.rs
day22/: Cargo.toml
day22/src/: 22.rs  main.rs
day23/: Cargo.toml
day23/src/: 23.rs  main.rs
day24/: Cargo.toml
day24/src/: 24.rs  main.rs
day25/: Cargo.toml
day25/src/: main.rs
src/: grid.rs  lib.rs  main.rs
template/: Cargo.toml
template/src/: advent_day.rs  main.rs
(+17 files in other folders)
