[package]
name = "advent"
version = "0.1.0"
edition = "2021"
default-run = "advent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
dotenv = "0.15.0"
hashbrown = "0.11.2"
itertools = "0.10.1"
reqwest = { version = "0.11.7", features = ["blocking"] }
retain_mut = "0.1.5"
