[package]
name = "advent"
version = "0.1.0"
edition = "2021"
default-run = "advent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"aoc*",
]

[profile.release]
codegen-units=1
lto="fat"

[dependencies]
anyhow = "1.0.66"
dotenv = "0.15.0"
hashbrown = "0.13.1"
itertools = "0.10.5"
reqwest = { version = "0.11.13", features = ["blocking"] }
