[package]
name = "aoc2015"
version = "0.0.0"
edition = "2021"
default-run = "aoc2015"

[lib]
doctest = false

[dependencies]
anyhow = "1.0.51"
advent = { path = "../" }
hashbrown = "0.11.2"
itertools = "0.10.1"
prettytable-rs = "0.8.0"
md5 = "0.7.0"
num_cpus = "1.13.1"
crossbeam-channel = "0.5.1"
fancy-regex = "0.7.1"
