[package]
name = "aoc2021"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
anyhow = "1.0.51"
advent = { path = "../" }
hashbrown = "0.11.2"
itertools = "0.10.1"
prettytable-rs = "0.8.0"
retain_mut = "0.1.5"
