[package]
name = "day04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/04.rs"
doctest = false

[dependencies]
anyhow = "1.0.51"
advent = { path = "../" }
retain_mut = "0.1.5"
itertools = "0.10.3"
