[package]
name = "day25"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/25.rs"
doctest = false

[dependencies]
anyhow = "1.0.51"
advent = { path = "../" }
hashbrown = "0.11.2"
itertools = "0.10.1"
